--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.6.10"
+  },
+  "dependencies": {
+    "vee-validate": "^2.2.14"
   }
 }
